feat: 支持便携模式运行，启动时自动初始化数据目录并提供 portable 状态查询命令 feat: 账号列表与卡片的状态标签使用多语言文本，区分正常/封禁并保持 UI 高亮一致 feat: 账号详情新增配额刷新与免费试用、奖励额度的展示，让用量信息更完整 chore: 同步 Tauri 命令注册、配置 schema 及依赖锁文件，确保便携模式和新增命令可用

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -187,6 +187,7 @@
   "accounts.used": "Used",
   "accounts.status": "Status",
   "accounts.active": "Active",
+  "accounts.banned": "Banned",
   "accounts.expired": "Expired",
   "accounts.expiringSoon": "Expiring Soon",
   "accounts.noAccounts": "No accounts",
