--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -174,6 +174,7 @@
   "accounts.used": "Использовано",
   "accounts.status": "Статус",
   "accounts.active": "Активен",
+  "accounts.banned": "Заблокирован",
   "accounts.expired": "Истёк",
   "accounts.expiringSoon": "Скоро истекает",
   "accounts.noAccounts": "Нет аккаунтов",
